# AADL

./: .editorconfig  .flake8  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
attacks/: esc1_simulation.py
dashboard/: index.html  pki_graph.js  styles.css
data/: sample_templates.yaml
defence/: eku_lockdown.py
detection/: template_scanner.ps1  template_scanner.py
docs/: API.md  DEVELOPMENT.md  TRAINING.md  USAGE.md
infra/ansible/: inventory.ini  setup-lab.yml
infra/scripts/: generate_lab_variables.ps1
infra/terraform/: main.tf  terraform.tfvars.example
src/adcs_lab/: __init__.py  attack_simulator.py  cli.py  config_loader.py  detection.py  hardening.py
tests/: conftest.py  test_cli_wrappers.py  test_simulation.py
